<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_background"/>

        <TextView
            android:id="@+id/expense_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:text="@string/expense_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/expense_category_name"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/expense_category"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/expense_description"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/expense_description"
            android:layout_marginBottom="30dp"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/expense_amount"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/expense_amount"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/date_created"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/date_created"
            android:minHeight="48dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:orientation="horizontal">

            <Button
                android:id="@+id/edit_expense_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edit_expense"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/back_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>